--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@faker-js/faker": "^10.2.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/express-rate-limit": "^5.1.3",
     "@types/helmet": "^0.0.48",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
@@ -41,12 +42,13 @@
     "@types/passport-github2": "^1.2.9",
     "@types/passport-google-oauth20": "^2.0.17",
     "@types/passport-linkedin-oauth2": "^1.5.6",
+    "@types/uuid": "^10.0.0",
     "@vercel/node": "^5.5.25",
     "nodemon": "^3.1.11",
     "prisma": "^6.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
-    },
+  },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
   }
