--- a/.github/workflows/ai-cron.yml
+++ b/.github/workflows/ai-cron.yml
@@ -15,10 +15,12 @@ jobs:
         with:
           python-version: '3.10'
       - name: Install Dependencies
-        run: pip install requests
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r scripts/requirements.txt
       - name: Run AI Recommendation Engine
         env:
-          AI_INTERNAL_API_KEY: ${{ secrets.AI_INTERNAL_API_KEY }}
-          API_BASE_URL: ${{ secrets.API_BASE_URL }}
+          API_KEY: ${{ secrets.AI_INTERNAL_API_KEY }}
+          BASE_URL: ${{ secrets.API_BASE_URL }}
         run: python scripts/ai-cron.py
 
