--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,51 @@
-DATABASE_URL=
-JWT_SECRET=
-BASE_URL=http://localhost:3000
-FRONTEND_URL=http://localhost:5173
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-GITHUB_CLIENT_ID=
-GITHUB_CLIENT_SECRET=
-LINKEDIN_CLIENT_ID=
-LINKEDIN_CLIENT_SECRET=
-AI_INTERNAL_API_KEY=
-LOG_LEVEL=info
+# Environment Variables Template
+# Copy this file to .env and fill in your actual values
+
+# ==========================================
+# DATABASE CONFIGURATION
+# ==========================================
+DATABASE_URL="postgresql://user:password@host:5432/database?sslmode=require&channel_binding=require"
+
+# ==========================================
+# JWT AUTHENTICATION
+# ==========================================
+JWT_SECRET="your-super-secret-jwt-key-minimum-32-characters-long"
+
+# ==========================================
+# APPLICATION URLS
+# ==========================================
+BASE_URL="http://localhost:3000"
+FRONTEND_URL="http://localhost:5173"
+
+# ==========================================
+# OAUTH - GOOGLE
+# ==========================================
+# Get credentials from: https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID="your-google-client-id.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="your-google-client-secret"
+
+# ==========================================
+# OAUTH - GITHUB
+# ==========================================
+# Get credentials from: https://github.com/settings/developers
+GITHUB_CLIENT_ID="your-github-client-id"
+GITHUB_CLIENT_SECRET="your-github-client-secret"
+
+# ==========================================
+# OAUTH - LINKEDIN
+# ==========================================
+# Get credentials from: https://www.linkedin.com/developers/apps
+LINKEDIN_CLIENT_ID="your-linkedin-client-id"
+LINKEDIN_CLIENT_SECRET="your-linkedin-client-secret"
+
+# ==========================================
+# AI & ADMIN
+# ==========================================
+AI_INTERNAL_API_KEY="your-internal-api-key-for-ai-endpoints"
+
+# ==========================================
+# EMAIL CONFIGURATION (Nodemailer)
+# ==========================================
+# For Gmail, create an App Password: https://myaccount.google.com/apppasswords
+EMAIL_USER="your-email@gmail.com"
+EMAIL_PASS="your-gmail-app-password"
