--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-linkedin-oauth2": "^2.0.0",
+    "razorpay": "^2.9.6",
     "redis": "^5.10.0",
     "winston": "^3.19.0",
     "zod": "^4.3.5"
